Add changes to display liberty projects in the dashboard in tree form